fixed inventory structure

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,5 +1,7 @@
 ---
-servers:
-  hosts:
-    localhost:
-      ansible_connection: local
+all:
+  children:
+    servers:
+      hosts:
+        localhost:
+          ansible_connection: local
